CA4003 - Assignment 1/assignParser.java
// Generated from assign.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class assignParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Variable=1, Constant=2, Return=3, Void=4, Main=5, If=6, Else=7, While=8, 
		Begin=9, End=10, Is=11, Integer=12, Boolean=13, Skipping=14, NEG=15, ASSIGN=16, 
		ADD=17, SEMI=18, MINUS=19, OR=20, AND=21, LBR=22, RBR=23, EQL=24, NEQL=25, 
		LESS=26, LESSEQ=27, GREATER=28, GREATEREQ=29, COLON=30, COMMA=31, BOOL=32, 
		ID=33, NUMBER=34, COMMENT=35, LINE_COMMENT=36, WS=37;
	public static final int
		RULE_prog = 0, RULE_stm = 1, RULE_expr = 2, RULE_cond = 3, RULE_var_decl = 4, 
		RULE_stmblock = 5, RULE_const_decl = 6, RULE_decl = 7, RULE_func = 8, 
		RULE_decl_lst = 9, RULE_main = 10, RULE_func_lst = 11, RULE_para_lst = 12, 
		RULE_nemp_paralst = 13, RULE_nemp_arglst = 14, RULE_arglst = 15, RULE_type = 16, 
		RULE_comp_op = 17, RULE_frag = 18, RULE_bin_arith_op = 19;
	public static final String[] ruleNames = {
		"prog", "stm", "expr", "cond", "var_decl", "stmblock", "const_decl", "decl", 
		"func", "decl_lst", "main", "func_lst", "para_lst", "nemp_paralst", "nemp_arglst", 
		"arglst", "type", "comp_op", "frag", "bin_arith_op"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "'~'", "':='", "'+'", "';'", "'-'", "'|'", "'&'", "'('", 
		"')'", "'='", "'!='", "'<'", "'<='", "'>'", "'>='", "':'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "Variable", "Constant", "Return", "Void", "Main", "If", "Else", 
		"While", "Begin", "End", "Is", "Integer", "Boolean", "Skipping", "NEG", 
		"ASSIGN", "ADD", "SEMI", "MINUS", "OR", "AND", "LBR", "RBR", "EQL", "NEQL", 
		"LESS", "LESSEQ", "GREATER", "GREATEREQ", "COLON", "COMMA", "BOOL", "ID", 
		"NUMBER", "COMMENT", "LINE_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "assign.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public assignParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public Decl_lstContext decl_lst() {
			return getRuleContext(Decl_lstContext.class,0);
		}
		public Func_lstContext func_lst() {
			return getRuleContext(Func_lstContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			decl_lst();
			setState(41);
			func_lst();
			setState(42);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmContext extends ParserRuleContext {
		public StmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stm; }
	 
		public StmContext() { }
		public void copyFrom(StmContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignStmContext extends StmContext {
		public TerminalNode ID() { return getToken(assignParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(assignParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(assignParser.SEMI, 0); }
		public AssignStmContext(StmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitAssignStm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockStmContext extends StmContext {
		public TerminalNode Begin() { return getToken(assignParser.Begin, 0); }
		public StmblockContext stmblock() {
			return getRuleContext(StmblockContext.class,0);
		}
		public TerminalNode End() { return getToken(assignParser.End, 0); }
		public BlockStmContext(StmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitBlockStm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArgStmContext extends StmContext {
		public TerminalNode ID() { return getToken(assignParser.ID, 0); }
		public TerminalNode LBR() { return getToken(assignParser.LBR, 0); }
		public ArglstContext arglst() {
			return getRuleContext(ArglstContext.class,0);
		}
		public TerminalNode RBR() { return getToken(assignParser.RBR, 0); }
		public TerminalNode SEMI() { return getToken(assignParser.SEMI, 0); }
		public ArgStmContext(StmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitArgStm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileStmContext extends StmContext {
		public TerminalNode While() { return getToken(assignParser.While, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public TerminalNode Begin() { return getToken(assignParser.Begin, 0); }
		public StmblockContext stmblock() {
			return getRuleContext(StmblockContext.class,0);
		}
		public TerminalNode End() { return getToken(assignParser.End, 0); }
		public WhileStmContext(StmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitWhileStm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SkipContext extends StmContext {
		public TerminalNode Skipping() { return getToken(assignParser.Skipping, 0); }
		public TerminalNode SEMI() { return getToken(assignParser.SEMI, 0); }
		public SkipContext(StmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitSkip(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfStmContext extends StmContext {
		public TerminalNode If() { return getToken(assignParser.If, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public List<TerminalNode> Begin() { return getTokens(assignParser.Begin); }
		public TerminalNode Begin(int i) {
			return getToken(assignParser.Begin, i);
		}
		public List<StmblockContext> stmblock() {
			return getRuleContexts(StmblockContext.class);
		}
		public StmblockContext stmblock(int i) {
			return getRuleContext(StmblockContext.class,i);
		}
		public List<TerminalNode> End() { return getTokens(assignParser.End); }
		public TerminalNode End(int i) {
			return getToken(assignParser.End, i);
		}
		public TerminalNode Else() { return getToken(assignParser.Else, 0); }
		public IfStmContext(StmContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitIfStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmContext stm() throws RecognitionException {
		StmContext _localctx = new StmContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stm);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new AssignStmContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				match(ID);
				setState(45);
				match(ASSIGN);
				setState(46);
				expr();
				setState(47);
				match(SEMI);
				}
				break;
			case 2:
				_localctx = new ArgStmContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				match(ID);
				setState(50);
				match(LBR);
				setState(51);
				arglst();
				setState(52);
				match(RBR);
				setState(53);
				match(SEMI);
				}
				break;
			case 3:
				_localctx = new BlockStmContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(55);
				match(Begin);
				setState(56);
				stmblock();
				setState(57);
				match(End);
				}
				break;
			case 4:
				_localctx = new IfStmContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				match(If);
				setState(60);
				cond(0);
				setState(61);
				match(Begin);
				setState(62);
				stmblock();
				setState(63);
				match(End);
				setState(64);
				match(Else);
				setState(65);
				match(Begin);
				setState(66);
				stmblock();
				setState(67);
				match(End);
				}
				break;
			case 5:
				_localctx = new WhileStmContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				match(While);
				setState(70);
				cond(0);
				setState(71);
				match(Begin);
				setState(72);
				stmblock();
				setState(73);
				match(End);
				}
				break;
			case 6:
				_localctx = new SkipContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				match(Skipping);
				setState(76);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FragOpContext extends ExprContext {
		public FragContext frag() {
			return getRuleContext(FragContext.class,0);
		}
		public FragOpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitFragOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprOpContext extends ExprContext {
		public TerminalNode LBR() { return getToken(assignParser.LBR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBR() { return getToken(assignParser.RBR, 0); }
		public ExprOpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitExprOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinOpContext extends ExprContext {
		public List<FragContext> frag() {
			return getRuleContexts(FragContext.class);
		}
		public FragContext frag(int i) {
			return getRuleContext(FragContext.class,i);
		}
		public Bin_arith_opContext bin_arith_op() {
			return getRuleContext(Bin_arith_opContext.class,0);
		}
		public BinOpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitBinOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArgOpContext extends ExprContext {
		public TerminalNode ID() { return getToken(assignParser.ID, 0); }
		public TerminalNode LBR() { return getToken(assignParser.LBR, 0); }
		public ArglstContext arglst() {
			return getRuleContext(ArglstContext.class,0);
		}
		public TerminalNode RBR() { return getToken(assignParser.RBR, 0); }
		public ArgOpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitArgOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new BinOpContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				frag();
				setState(80);
				bin_arith_op();
				setState(81);
				frag();
				}
				break;
			case 2:
				_localctx = new ExprOpContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(LBR);
				setState(84);
				expr();
				setState(85);
				match(RBR);
				}
				break;
			case 3:
				_localctx = new ArgOpContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				match(ID);
				setState(88);
				match(LBR);
				setState(89);
				arglst();
				setState(90);
				match(RBR);
				}
				break;
			case 4:
				_localctx = new FragOpContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				frag();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
	 
		public CondContext() { }
		public void copyFrom(CondContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NegCondContext extends CondContext {
		public TerminalNode NEG() { return getToken(assignParser.NEG, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public NegCondContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitNegCond(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrAndCondContext extends CondContext {
		public List<CondContext> cond() {
			return getRuleContexts(CondContext.class);
		}
		public CondContext cond(int i) {
			return getRuleContext(CondContext.class,i);
		}
		public TerminalNode OR() { return getToken(assignParser.OR, 0); }
		public TerminalNode AND() { return getToken(assignParser.AND, 0); }
		public OrAndCondContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitOrAndCond(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompOpCondContext extends CondContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Comp_opContext comp_op() {
			return getRuleContext(Comp_opContext.class,0);
		}
		public CompOpCondContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitCompOpCond(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LRCondContext extends CondContext {
		public TerminalNode LBR() { return getToken(assignParser.LBR, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public TerminalNode RBR() { return getToken(assignParser.RBR, 0); }
		public LRCondContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitLRCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		return cond(0);
	}

	private CondContext cond(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CondContext _localctx = new CondContext(_ctx, _parentState);
		CondContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_cond, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				_localctx = new NegCondContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(96);
				match(NEG);
				setState(97);
				cond(4);
				}
				break;
			case 2:
				{
				_localctx = new LRCondContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(98);
				match(LBR);
				setState(99);
				cond(0);
				setState(100);
				match(RBR);
				}
				break;
			case 3:
				{
				_localctx = new CompOpCondContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(102);
				expr();
				setState(103);
				comp_op();
				setState(104);
				expr();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OrAndCondContext(new CondContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_cond);
					setState(108);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(109);
					_la = _input.LA(1);
					if ( !(_la==OR || _la==AND) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(110);
					cond(2);
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public TerminalNode Variable() { return getToken(assignParser.Variable, 0); }
		public TerminalNode ID() { return getToken(assignParser.ID, 0); }
		public TerminalNode COLON() { return getToken(assignParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(assignParser.SEMI, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(Variable);
			setState(117);
			match(ID);
			setState(118);
			match(COLON);
			setState(119);
			type();
			setState(120);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmblockContext extends ParserRuleContext {
		public List<StmContext> stm() {
			return getRuleContexts(StmContext.class);
		}
		public StmContext stm(int i) {
			return getRuleContext(StmContext.class,i);
		}
		public StmblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmblock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitStmblock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmblockContext stmblock() throws RecognitionException {
		StmblockContext _localctx = new StmblockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stmblock);
		int _la;
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << While) | (1L << Begin) | (1L << Skipping) | (1L << ID))) != 0)) {
					{
					{
					setState(122);
					stm();
					}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_declContext extends ParserRuleContext {
		public TerminalNode Constant() { return getToken(assignParser.Constant, 0); }
		public TerminalNode ID() { return getToken(assignParser.ID, 0); }
		public TerminalNode COLON() { return getToken(assignParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(assignParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(assignParser.SEMI, 0); }
		public Const_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitConst_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Const_declContext const_decl() throws RecognitionException {
		Const_declContext _localctx = new Const_declContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_const_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(Constant);
			setState(132);
			match(ID);
			setState(133);
			match(COLON);
			setState(134);
			type();
			setState(135);
			match(ASSIGN);
			setState(136);
			expr();
			setState(137);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Const_declContext const_decl() {
			return getRuleContext(Const_declContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_decl);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Variable:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				var_decl();
				}
				break;
			case Constant:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				const_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(assignParser.ID, 0); }
		public List<TerminalNode> LBR() { return getTokens(assignParser.LBR); }
		public TerminalNode LBR(int i) {
			return getToken(assignParser.LBR, i);
		}
		public Para_lstContext para_lst() {
			return getRuleContext(Para_lstContext.class,0);
		}
		public List<TerminalNode> RBR() { return getTokens(assignParser.RBR); }
		public TerminalNode RBR(int i) {
			return getToken(assignParser.RBR, i);
		}
		public TerminalNode Is() { return getToken(assignParser.Is, 0); }
		public Decl_lstContext decl_lst() {
			return getRuleContext(Decl_lstContext.class,0);
		}
		public TerminalNode Begin() { return getToken(assignParser.Begin, 0); }
		public StmblockContext stmblock() {
			return getRuleContext(StmblockContext.class,0);
		}
		public TerminalNode Return() { return getToken(assignParser.Return, 0); }
		public TerminalNode SEMI() { return getToken(assignParser.SEMI, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode End() { return getToken(assignParser.End, 0); }
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignVisitor ) return ((assignVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			type();
			setState(144);
			match(ID);
			setState(145);
			match(LBR);
			setState(146);
			para_lst();
			setState(147);
			match(RBR);
			setState(148);
			match(Is);
			setState(149);
